# real_estate_pipeline

./: Dockerfile  README.md  pyproject.toml
diagrams/: basic_etl_diagram
real_estate_pipeline/: main.py
resources/: sample.json
