[tool.poetry]
name = "real-estate-pipeline"
version = "0.1.0"
description = "An example pipeline to parse and save real estate data using Apache Spark."
authors = ["dmavrotas <dmavrotas@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
